[package]
name = "ss_rust"
version = "0.0.1"
authors = ["just for fun"]

[lib]
name = "ss_rust"

[[bin]]
name = "sslocal"
path = "src/bin/local.rs"

[[bin]]
name = "ssserver"
path = "src/bin/server.rs"

[dependencies]
log = "0.3"
lazy_static = "0.2"
serde_json = "1.0"
bytes = "0.4"
byteorder = "1.2"

dns-lookup = "0.8"

base_log = {git = "https://code.csdn.net/limite_god/base_log.git"}
base_config = {git = "https://code.csdn.net/limite_god/base_config.git"}
